--- a/swap-box/package.json
+++ b/swap-box/package.json
@@ -12,5 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "4.26.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.30",
+    "typescript": "5.4.3"
   }
 }
